syntax = "proto3";
package osmosis.incentives;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "osmosis/incentives/pot.proto";
import "osmosis/lockup/lock.proto";

option go_package = "github.com/osmosis-labs/osmosis/x/incentives/types";

// Query defines the gRPC querier service.
service Query {
  // returns coins that is going to be distributed
  rpc ModuleToDistributeCoins(ModuleToDistributeCoinsRequest)
      returns (ModuleToDistributeCoinsResponse) {
    option (google.api.http).get = "/osmosis/incentives/v1beta1/module_to_distribute_coins";
  }
  // returns coins that are distributed by module so far
  rpc ModuleDistributedCoins(ModuleDistributedCoinsRequest)
      returns (ModuleDistributedCoinsResponse) {
    option (google.api.http).get = "/osmosis/incentives/v1beta1/module_distributed_coins";
  }

  // returns Pot by id
  rpc PotByID(PotByIDRequest) returns (PotByIDResponse) {
    option (google.api.http).get = "/osmosis/incentives/v1beta1/pot_by_id/{id}";
  }
  // returns pots both upcoming and active
  rpc Pots(PotsRequest) returns (PotsResponse) {
    option (google.api.http).get = "/osmosis/incentives/v1beta1/pots";
  }
  // returns active pots
  rpc ActivePots(ActivePotsRequest) returns (ActivePotsResponse) {
    option (google.api.http).get = "/osmosis/incentives/v1beta1/active_pots";
  }
  // returns scheduled pots
  rpc UpcomingPots(UpcomingPotsRequest) returns (UpcomingPotsResponse) {
    option (google.api.http).get = "/osmosis/incentives/v1beta1/upcoming_pots";
  }
  // RewardsEst returns an estimate of the rewards at a future specific time.
  // The querier either provides an address or a set of locks
  // for which they want to find the associated rewards.
  rpc RewardsEst(RewardsEstRequest) returns (RewardsEstResponse) {
    option (google.api.http).get = "/osmosis/incentives/v1beta1/rewards_est/{owner}";
  }
}

message ModuleToDistributeCoinsRequest {}
message ModuleToDistributeCoinsResponse {
  repeated cosmos.base.v1beta1.Coin coins = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

message ModuleDistributedCoinsRequest {}
message ModuleDistributedCoinsResponse {
  repeated cosmos.base.v1beta1.Coin coins = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

message PotByIDRequest { uint64 id = 1; }
message PotByIDResponse { Pot pot = 1; }

message PotsRequest {
  // pagination defines an pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}
message PotsResponse {
  repeated Pot data = 1 [ (gogoproto.nullable) = false ];
  // pagination defines an pagination for the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message ActivePotsRequest {
  // pagination defines an pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}
message ActivePotsResponse {
  repeated Pot data = 1 [ (gogoproto.nullable) = false ];
  // pagination defines an pagination for the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message UpcomingPotsRequest {
  // pagination defines an pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}
message UpcomingPotsResponse {
  repeated Pot data = 1 [ (gogoproto.nullable) = false ];
  // pagination defines an pagination for the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message RewardsEstRequest {
  string owner = 1 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
  repeated uint64 lock_ids = 2;
  int64 end_epoch = 3;
}
message RewardsEstResponse {
  repeated cosmos.base.v1beta1.Coin coins = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}
